--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .heading__mini {
+    @apply text-[13px] md:text-[15px] text-white opacity-90;
+  }
+
+  .heading__primary {
+    @apply text-[25px] md:text-[30px] lg:text-[35px] xl:text-[45px] leading-[2.5rem] md:leading-[3.5rem] text-white;
+  }
+}
